Fix small typos in documentation

--- a/Documentation/4a. Connecting with Cocos2d JS.md
+++ b/Documentation/4a. Connecting with Cocos2d JS.md
@@ -60,7 +60,7 @@ For your convenience, CCBReader can also wrap your node graph in a scene. To loa
     var myScene = cc.BuilderReader.loadAsScene("MyScene");
 
 ### Passing an Owner Variable
-Sometimes you need to be able to access member variables from and get callbacks to another object than the root node of a ccb-file. To do this you will need to pass a *owner* to the CCBReader. To get the variable or callback assigned to the owner, make sure that you've selected owner when declaring the member variable name or callback in CocosBuilder. The call the *cc.BuilderReader.load* or *cc.BuilderReader.loadAsScene* method but add an extra variable with the owner.
+Sometimes you need to be able to access member variables from and get callbacks to another object than the root node of a ccb-file. To do this you will need to pass a *owner* to the CCBReader. To get the variable or callback assigned to the owner, make sure that you've selected owner when declaring the member variable name or callback in CocosBuilder. Then call the *cc.BuilderReader.load* or *cc.BuilderReader.loadAsScene* method but add an extra variable with the owner.
 
     // Setup myCallbackObject somewhere in your code;
   	
