--- a/Documentation/6. Working with Animations.md
+++ b/Documentation/6. Working with Animations.md
@@ -58,7 +58,7 @@ To programmatically control the animations you create with CocosBuilder you will
     CCNode* myNodeGraph = [CCBReader nodeGraphFromFile:@"myFile.ccbi"];
     CCBAnimationManager* animationManager = myNodeGraph.userObject;
 
-The action manager will be returned as an autoreleased object. To play back a specific timeline call the *runAnimationsForSequenceNamed:* method. If a timeline is currently playing it will be immediately stopped when calling this method.
+The animation manager will be returned as an autoreleased object. To play back a specific timeline call the *runAnimationsForSequenceNamed:* method. If a timeline is currently playing it will be immediately stopped when calling this method.
 
     [animationManager runAnimationsForSequenceNamed:@"My Timeline"];
 
